--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Meta Tags -->
@@ -25,7 +25,7 @@
     <!-- No script message end -->
 
     <!-- Root -->
-    <div id="root" class="root"></div>
+    <canvas style="height: 100vh; width: 100vw" touch-action="none"></canvas>
     <!-- Root end -->
   </body>
 </html>
