fix: final touches and cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- Title -->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Babylon POC</title>
   </head>
 
   <body>
     <!-- No script message -->
     <noscript>
       <strong>
-        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to continue.
+        We're sorry but Babylon POC doesn't work properly without JavaScript
+        enabled. Please enable it to continue.
       </strong>
     </noscript>
     <!-- No script message end -->
